@@ -222,6 +222,15 @@ public:
 };
 
 /**
+ * Plot Alpha (Alpha) modification
+ */
+class plot_alpha_modification : public modification
+{
+public:
+	virtual surface operator()(const surface& src) const;
+};
+
+/**
  * Crop (CROP) modification.
  */
 class crop_modification : public modification
