@@ -387,6 +387,8 @@ Version 1.13.0-dev:
    * Now may save screenshots and other images as pngs, using SDL_SavePNG lib (from github)
    * Image path function ~xBRZ added, taking one argument, the scaling factor. A number 1-5.
    * Image path function ~SCALE_SHARP added, analogous to ~SCALE but using nearest neighbor algo.
+   * Image path function ~Alpha added. Takes no arguments, plots the alpha channel in greyscale.
+     Mainly useful for diagnostics of other ipf combinations, or debugging the engine itself.
 
 Version 1.11.11:
  * Add-ons server:
